--- a/package/emulationstation/es-system/locales/ar/es-system.po
+++ b/package/emulationstation/es-system/locales/ar/es-system.po
@@ -825,7 +825,7 @@ msgctxt "game_options"
 msgid "24 bit (Default)"
 msgstr "٢٤ بت (الإفتراضي)"
 
-#. TRANSLATION: libretro/cap32, sonic2013, soniccd, play, citron, ...
+#. TRANSLATION: libretro/cap32, sonic2013, soniccd, play, eden, ...
 msgctxt "game_options"
 msgid "Change the game's language."
 msgstr "تغيير لغة اللعبة."
@@ -2096,17 +2096,17 @@ msgctxt "game_options"
 msgid "Wii NAND's language setting."
 msgstr ""
 
-#. TRANSLATION: libretro/dolphin, cemu, dolphin/uzem, play, citron, ...
+#. TRANSLATION: libretro/dolphin, cemu, dolphin/uzem, play, eden, ...
 msgctxt "game_options"
 msgid "Dutch"
 msgstr "الهولندية"
 
-#. TRANSLATION: libretro/dolphin, play, citron, ryujinx, sonic-mania
+#. TRANSLATION: libretro/dolphin, play, eden, ryujinx, sonic-mania
 msgctxt "game_options"
 msgid "Simplified Chinese"
 msgstr "الصينية المبسطة"
 
-#. TRANSLATION: libretro/dolphin, play, citron, ryujinx, sonic-mania
+#. TRANSLATION: libretro/dolphin, play, eden, ryujinx, sonic-mania
 msgctxt "game_options"
 msgid "Traditional Chinese"
 msgstr "الصينية التقليدية"
@@ -2592,7 +2592,7 @@ msgctxt "game_options"
 msgid "Hungary"
 msgstr "هنغاريا"
 
-#. TRANSLATION: libretro/dosbox_pure, citron
+#. TRANSLATION: libretro/dosbox_pure, eden
 msgctxt "game_options"
 msgid "Iceland"
 msgstr "أيسلندا"
@@ -2612,12 +2612,12 @@ msgctxt "game_options"
 msgid "Norway"
 msgstr "النرويج"
 
-#. TRANSLATION: libretro/dosbox_pure, citron
+#. TRANSLATION: libretro/dosbox_pure, eden
 msgctxt "game_options"
 msgid "Poland"
 msgstr "بولندا"
 
-#. TRANSLATION: libretro/dosbox_pure, citron
+#. TRANSLATION: libretro/dosbox_pure, eden
 msgctxt "game_options"
 msgid "Portugal"
 msgstr "البرتغال"
@@ -2657,7 +2657,7 @@ msgctxt "game_options"
 msgid "Switzerland (French)"
 msgstr "سويسرا (الفرنسية)"
 
-#. TRANSLATION: libretro/dosbox_pure, citron
+#. TRANSLATION: libretro/dosbox_pure, eden
 msgctxt "game_options"
 msgid "Turkey"
 msgstr "تركيا"
@@ -3256,17 +3256,17 @@ msgctxt "game_options"
 msgid "Choose the Dreamcast console region."
 msgstr "اختر منطقة كونسول الدريم كاست."
 
-#. TRANSLATION: libretro/flycast, libretro/geolith, libretro/neocd, flycast/uzem, citron, ...
+#. TRANSLATION: libretro/flycast, libretro/geolith, libretro/neocd, flycast/uzem, eden, ...
 msgctxt "game_options"
 msgid "USA"
 msgstr "الولايات المتحدة"
 
-#. TRANSLATION: libretro/flycast, libretro/geolith, libretro/neocd, flycast/uzem, citron, ...
+#. TRANSLATION: libretro/flycast, libretro/geolith, libretro/neocd, flycast/uzem, eden, ...
 msgctxt "game_options"
 msgid "Europe"
 msgstr "أوروبا"
 
-#. TRANSLATION: libretro/flycast, libretro/geolith, libretro/neocd, flycast/uzem, citron, ...
+#. TRANSLATION: libretro/flycast, libretro/geolith, libretro/neocd, flycast/uzem, eden, ...
 msgctxt "game_options"
 msgid "Japan"
 msgstr "اليابان"
@@ -5615,7 +5615,7 @@ msgctxt "game_options"
 msgid "Enhancement. Smooth out jagged edges on 3D objects polygons."
 msgstr "تحسين. تنعيم الحواف المسننة لمضلعات الكائنات ثلاثية الأبعاد."
 
-#. TRANSLATION: libretro/mupen64plus-next, libretro/parallel_n64, ppsspp, citron, dxx-rebirth
+#. TRANSLATION: libretro/mupen64plus-next, libretro/parallel_n64, ppsspp, eden, dxx-rebirth
 msgctxt "game_options"
 msgid "Smooth textures on 3D objects."
 msgstr ""
@@ -8217,7 +8217,7 @@ msgctxt "game_options"
 msgid "Vulkan (Default)"
 msgstr "‫Vulkan (الافتراضي)"
 
-#. TRANSLATION: cemu, citron
+#. TRANSLATION: cemu, eden
 msgctxt "game_options"
 msgid "Speed up shader compilation."
 msgstr ""
@@ -8283,22 +8283,22 @@ msgctxt "game_options"
 msgid "Current language"
 msgstr "اللغة الحالية"
 
-#. TRANSLATION: cemu, sonic2013, citron, ryujinx, xenia, ...
+#. TRANSLATION: cemu, sonic2013, eden, ryujinx, xenia, ...
 msgctxt "game_options"
 msgid "Chinese"
 msgstr "الصينية"
 
-#. TRANSLATION: cemu, scummvm, play, citron, ryujinx, ...
+#. TRANSLATION: cemu, scummvm, play, eden, ryujinx, ...
 msgctxt "game_options"
 msgid "Portuguese"
 msgstr "البرتغالية"
 
-#. TRANSLATION: cemu, scummvm, sonic2013, play, citron, ...
+#. TRANSLATION: cemu, scummvm, sonic2013, play, eden, ...
 msgctxt "game_options"
 msgid "Russian"
 msgstr "الروسية"
 
-#. TRANSLATION: cemu, citron, ryujinx
+#. TRANSLATION: cemu, eden, ryujinx
 msgctxt "game_options"
 msgid "Taiwanese"
 msgstr "الديوانية"
@@ -8318,7 +8318,7 @@ msgctxt "game_options"
 msgid "Stereo (Default)"
 msgstr "ستريو (افتراضي)"
 
-#. TRANSLATION: cemu, citron
+#. TRANSLATION: cemu, eden
 msgctxt "game_options"
 msgid "Surround"
 msgstr "محيطي"
@@ -8373,7 +8373,7 @@ msgctxt "game_options"
 msgid "UPSCALE FILTER"
 msgstr ""
 
-#. TRANSLATION: cemu, cemu, ppsspp, citron
+#. TRANSLATION: cemu, cemu, ppsspp, eden
 msgctxt "game_options"
 msgid "Bicubic"
 msgstr ""
@@ -8383,7 +8383,7 @@ msgctxt "game_options"
 msgid "Hermite (Default)"
 msgstr ""
 
-#. TRANSLATION: cemu, cemu, sonic2013, soniccd, citron
+#. TRANSLATION: cemu, cemu, sonic2013, soniccd, eden
 msgctxt "game_options"
 msgid "Nearest Neighbour"
 msgstr ""
@@ -8627,7 +8627,7 @@ msgctxt "game_options"
 msgid "Not all games support stretching, depending on their video files."
 msgstr ""
 
-#. TRANSLATION: hypseus-singe, dolphin, dolphin_triforce, citron
+#. TRANSLATION: hypseus-singe, dolphin, dolphin_triforce, eden
 msgctxt "game_options"
 msgid "Force 4:3"
 msgstr ""
@@ -8867,7 +8867,7 @@ msgctxt "game_options"
 msgid "Force 16:9"
 msgstr ""
 
-#. TRANSLATION: dolphin, dolphin_triforce, citron
+#. TRANSLATION: dolphin, dolphin_triforce, eden
 msgctxt "game_options"
 msgid "Stretch to window"
 msgstr ""
@@ -10693,7 +10693,7 @@ msgid ""
 "games."
 msgstr ""
 
-#. TRANSLATION: pcsx2, citron, vita3k
+#. TRANSLATION: pcsx2, eden, vita3k
 msgctxt "game_options"
 msgid "FXAA"
 msgstr ""
@@ -11314,7 +11314,7 @@ msgctxt "game_options"
 msgid "AUDIO FORMAT"
 msgstr "تنسيق الصوت"
 
-#. TRANSLATION: rpcs3, citron
+#. TRANSLATION: rpcs3, eden
 msgctxt "game_options"
 msgid "Stereo"
 msgstr "ستريو"
@@ -12776,82 +12776,82 @@ msgctxt "game_options"
 msgid "Only applicable when using OpenGL."
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "0.5x (360p/540p) [EXPERIMENTAL]"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "0.75x (540p/810p) [EXPERIMENTAL]"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "1x (720p/1080p)"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "1.5x (1080p/1620p) [EXPERIMENTAL]"
 msgstr ""
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "2x (1440p/2160p)"
 msgstr "‫x٢ (١٤٤٠p/٢١٦٠p)"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "3x (2160p/3240p)"
 msgstr "‫x٣ (٢١٦٠p/٣٢٤٠p)"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "4x (2880p/4320p)"
 msgstr "‫x٤ (٢٨٨٠p/٤٣٢٠p)"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "5x (3600p/5400p)"
 msgstr "‫x٥ (٣٦٠٠p/٥٤٠٠p)"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "6x (4320p/6480p)"
 msgstr "‫x٦ (٤٣٢٠p/٦٤٨٠p)"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "7x (5040p/7560p)"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "8x (5760p/8640p)"
 msgstr ""
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "16:9 (Default)"
 msgstr "٩:١٦ (افتراضي)"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Force 21:9"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Force 16:10"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Force 32:9"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid ""
 "Fix screen tearing. FIFO (Vsync) does not drop frames. FIFO Relaxed allows "
@@ -12859,365 +12859,365 @@ msgid ""
 "may drop frames."
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Immediate"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Mailbox (Recommended)"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "FIFO (VSync On)"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "FIFO Relaxed"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "ASYNC SHADER COMPILE"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid ""
 "FXAA has a lower performance impact, goof for low resolutions. SMAA offers "
 "best quality."
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "ANTI-ALIASING METHOD"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "SMAA"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Gaussian"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "ScaleForce"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "AMD FidelityFX Super Resolution"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid ""
 "GPU emulation accuracy. Most games render fine with Normal. High is required "
 "to ensure particles render correctly."
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "ACCURACY LEVEL"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Extreme"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "CHOOSE SOUND OUTPUT MODE"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Mono"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Choose whether the virtual switch is docked or not."
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "DOCK MODE"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Undocked"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Docked (Default)"
 msgstr ""
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "British English"
 msgstr "الإنجليزية البريطانية"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "Canadian French"
 msgstr "الكندية الفرنسية"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "Latin American Spanish"
 msgstr "إسبانية امريكا اللاتينية"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "Brazilian Portuguese"
 msgstr "البرتغالية البرازيلية"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 #, fuzzy
 msgctxt "game_options"
 msgid "Choose your console region."
 msgstr "اختر منطقة وحدة التحكم الخاصة بك."
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 #, fuzzy
 msgctxt "game_options"
 msgid "CHOOSE CONSOLE REGION"
 msgstr "اختر منطقة وحدة التحكم"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "Australia"
 msgstr "أستراليا"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "China"
 msgstr "الصين"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "Korea"
 msgstr "كوريا"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "Taiwan"
 msgstr "تايوان"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 #, fuzzy
 msgctxt "game_options"
 msgid "Choose your console timezone."
 msgstr "اختر المنطقة الزمنية لوحدة التحكم الخاصة بك."
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 #, fuzzy
 msgctxt "game_options"
 msgid "CHOOSE CONSOLE TIMEZONE"
 msgstr "اختر المنطقة الزمنية لوحدة التحكم"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "CET"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "CST6CDT"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Cuba"
 msgstr "كوبا"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "EET"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Egypt"
 msgstr "مصر"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Eire"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "EST"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "EST5EDT"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "GB"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "GB-Eire"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "GMT"
 msgstr "توقيت جرينتش"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "GMT+0"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "GMT-0"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "GMT0"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Greenwich"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Hong Kong"
 msgstr "هونج كونج"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "HST"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Iran"
 msgstr "إيران"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Israel"
 msgstr "دولة الاحتلال"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Jamaica"
 msgstr "جامايكا"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Kwajalein"
 msgstr "كواجالين"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Libya"
 msgstr "ليبيا"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "MET"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "MST"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "MST7MDT"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Navajo"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "NZ"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "NZ-CHAT"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "PRC"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "PST8PDT"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "ROC"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "ROK"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Singapore"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "UCT"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Univarsal"
 msgstr ""
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "UTC"
 msgstr "التوقيت العالمي"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "W-SU"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "WET"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Zulu"
 msgstr ""
