--- a/package/emulationstation/es-system/locales/id_ID/es-system.po
+++ b/package/emulationstation/es-system/locales/id_ID/es-system.po
@@ -805,7 +805,7 @@ msgctxt "game_options"
 msgid "24 bit (Default)"
 msgstr "24 bit (Standar)"
 
-#. TRANSLATION: libretro/cap32, sonic2013, soniccd, play, citron, ...
+#. TRANSLATION: libretro/cap32, sonic2013, soniccd, play, eden, ...
 msgctxt "game_options"
 msgid "Change the game's language."
 msgstr "Ubah bahasa permainan"
@@ -2077,17 +2077,17 @@ msgctxt "game_options"
 msgid "Wii NAND's language setting."
 msgstr "Wii NAND's pengaturan bahasa."
 
-#. TRANSLATION: libretro/dolphin, cemu, dolphin/uzem, play, citron, ...
+#. TRANSLATION: libretro/dolphin, cemu, dolphin/uzem, play, eden, ...
 msgctxt "game_options"
 msgid "Dutch"
 msgstr "Dutch (Beland)"
 
-#. TRANSLATION: libretro/dolphin, play, citron, ryujinx, sonic-mania
+#. TRANSLATION: libretro/dolphin, play, eden, ryujinx, sonic-mania
 msgctxt "game_options"
 msgid "Simplified Chinese"
 msgstr "Cina Sederhana"
 
-#. TRANSLATION: libretro/dolphin, play, citron, ryujinx, sonic-mania
+#. TRANSLATION: libretro/dolphin, play, eden, ryujinx, sonic-mania
 msgctxt "game_options"
 msgid "Traditional Chinese"
 msgstr "Cina Tradisional"
@@ -2575,7 +2575,7 @@ msgctxt "game_options"
 msgid "Hungary"
 msgstr "Hungaria"
 
-#. TRANSLATION: libretro/dosbox_pure, citron
+#. TRANSLATION: libretro/dosbox_pure, eden
 msgctxt "game_options"
 msgid "Iceland"
 msgstr "Islandia"
@@ -2595,12 +2595,12 @@ msgctxt "game_options"
 msgid "Norway"
 msgstr "Norwagia"
 
-#. TRANSLATION: libretro/dosbox_pure, citron
+#. TRANSLATION: libretro/dosbox_pure, eden
 msgctxt "game_options"
 msgid "Poland"
 msgstr "Polandia"
 
-#. TRANSLATION: libretro/dosbox_pure, citron
+#. TRANSLATION: libretro/dosbox_pure, eden
 msgctxt "game_options"
 msgid "Portugal"
 msgstr "Portugal"
@@ -2640,7 +2640,7 @@ msgctxt "game_options"
 msgid "Switzerland (French)"
 msgstr "Switzerland (Prancis)"
 
-#. TRANSLATION: libretro/dosbox_pure, citron
+#. TRANSLATION: libretro/dosbox_pure, eden
 msgctxt "game_options"
 msgid "Turkey"
 msgstr "Tiruki"
@@ -3237,17 +3237,17 @@ msgctxt "game_options"
 msgid "Choose the Dreamcast console region."
 msgstr "Pilih Wilayah Konsol Dreamcast"
 
-#. TRANSLATION: libretro/flycast, libretro/geolith, libretro/neocd, flycast/uzem, citron, ...
+#. TRANSLATION: libretro/flycast, libretro/geolith, libretro/neocd, flycast/uzem, eden, ...
 msgctxt "game_options"
 msgid "USA"
 msgstr "Amerika"
 
-#. TRANSLATION: libretro/flycast, libretro/geolith, libretro/neocd, flycast/uzem, citron, ...
+#. TRANSLATION: libretro/flycast, libretro/geolith, libretro/neocd, flycast/uzem, eden, ...
 msgctxt "game_options"
 msgid "Europe"
 msgstr "Eropa"
 
-#. TRANSLATION: libretro/flycast, libretro/geolith, libretro/neocd, flycast/uzem, citron, ...
+#. TRANSLATION: libretro/flycast, libretro/geolith, libretro/neocd, flycast/uzem, eden, ...
 msgctxt "game_options"
 msgid "Japan"
 msgstr "Jepang"
@@ -5608,7 +5608,7 @@ msgctxt "game_options"
 msgid "Enhancement. Smooth out jagged edges on 3D objects polygons."
 msgstr "Meningkatkan. Menghaluskan tepi bergerigi pada poligon objek 3D."
 
-#. TRANSLATION: libretro/mupen64plus-next, libretro/parallel_n64, ppsspp, citron, dxx-rebirth
+#. TRANSLATION: libretro/mupen64plus-next, libretro/parallel_n64, ppsspp, eden, dxx-rebirth
 msgctxt "game_options"
 msgid "Smooth textures on 3D objects."
 msgstr "Tekstur halus pada objek 3D."
@@ -8219,7 +8219,7 @@ msgctxt "game_options"
 msgid "Vulkan (Default)"
 msgstr "Vulkan (Standar))"
 
-#. TRANSLATION: cemu, citron
+#. TRANSLATION: cemu, eden
 msgctxt "game_options"
 msgid "Speed up shader compilation."
 msgstr "Percepat Kompilasi Shader"
@@ -8284,22 +8284,22 @@ msgctxt "game_options"
 msgid "Current language"
 msgstr "BAHASA SEBELUM-NYA"
 
-#. TRANSLATION: cemu, sonic2013, citron, ryujinx, xenia, ...
+#. TRANSLATION: cemu, sonic2013, eden, ryujinx, xenia, ...
 msgctxt "game_options"
 msgid "Chinese"
 msgstr "Cina"
 
-#. TRANSLATION: cemu, scummvm, play, citron, ryujinx, ...
+#. TRANSLATION: cemu, scummvm, play, eden, ryujinx, ...
 msgctxt "game_options"
 msgid "Portuguese"
 msgstr "Portugis"
 
-#. TRANSLATION: cemu, scummvm, sonic2013, play, citron, ...
+#. TRANSLATION: cemu, scummvm, sonic2013, play, eden, ...
 msgctxt "game_options"
 msgid "Russian"
 msgstr "Rusia"
 
-#. TRANSLATION: cemu, citron, ryujinx
+#. TRANSLATION: cemu, eden, ryujinx
 msgctxt "game_options"
 msgid "Taiwanese"
 msgstr "Taiwan"
@@ -8319,7 +8319,7 @@ msgctxt "game_options"
 msgid "Stereo (Default)"
 msgstr "Stereo (Standar)"
 
-#. TRANSLATION: cemu, citron
+#. TRANSLATION: cemu, eden
 msgctxt "game_options"
 msgid "Surround"
 msgstr "Surround"
@@ -8374,7 +8374,7 @@ msgctxt "game_options"
 msgid "UPSCALE FILTER"
 msgstr "SARING UPSCALE"
 
-#. TRANSLATION: cemu, cemu, ppsspp, citron
+#. TRANSLATION: cemu, cemu, ppsspp, eden
 msgctxt "game_options"
 msgid "Bicubic"
 msgstr "Bicubic"
@@ -8384,7 +8384,7 @@ msgctxt "game_options"
 msgid "Hermite (Default)"
 msgstr "Hermite (Standar)"
 
-#. TRANSLATION: cemu, cemu, sonic2013, soniccd, citron
+#. TRANSLATION: cemu, cemu, sonic2013, soniccd, eden
 msgctxt "game_options"
 msgid "Nearest Neighbour"
 msgstr "Mendekai Tetangga"
@@ -8633,7 +8633,7 @@ msgid "Not all games support stretching, depending on their video files."
 msgstr ""
 "Tidak semua games mendukung perentangan, bergantung pada files video mereka"
 
-#. TRANSLATION: hypseus-singe, dolphin, dolphin_triforce, citron
+#. TRANSLATION: hypseus-singe, dolphin, dolphin_triforce, eden
 msgctxt "game_options"
 msgid "Force 4:3"
 msgstr "Dorong 4:3"
@@ -8876,7 +8876,7 @@ msgctxt "game_options"
 msgid "Force 16:9"
 msgstr "Paksa 16:9"
 
-#. TRANSLATION: dolphin, dolphin_triforce, citron
+#. TRANSLATION: dolphin, dolphin_triforce, eden
 msgctxt "game_options"
 msgid "Stretch to window"
 msgstr "Rentangkan ke jendela (window)"
@@ -10713,7 +10713,7 @@ msgid ""
 "games."
 msgstr ""
 
-#. TRANSLATION: pcsx2, citron, vita3k
+#. TRANSLATION: pcsx2, eden, vita3k
 msgctxt "game_options"
 msgid "FXAA"
 msgstr "FXAA"
@@ -11346,7 +11346,7 @@ msgctxt "game_options"
 msgid "AUDIO FORMAT"
 msgstr ""
 
-#. TRANSLATION: rpcs3, citron
+#. TRANSLATION: rpcs3, eden
 msgctxt "game_options"
 msgid "Stereo"
 msgstr "Stereo"
@@ -12839,82 +12839,82 @@ msgctxt "game_options"
 msgid "Only applicable when using OpenGL."
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "0.5x (360p/540p) [EXPERIMENTAL]"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "0.75x (540p/810p) [EXPERIMENTAL]"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "1x (720p/1080p)"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "1.5x (1080p/1620p) [EXPERIMENTAL]"
 msgstr ""
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "2x (1440p/2160p)"
 msgstr "2x (1440p/2160p)"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "3x (2160p/3240p)"
 msgstr "3x (2160p/3240p)"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "4x (2880p/4320p)"
 msgstr "4x (2880p/4320p)"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "5x (3600p/5400p)"
 msgstr "5x (3600p/5400p)"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "6x (4320p/6480p)"
 msgstr "6x (4320p/6480p)"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "7x (5040p/7560p)"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "8x (5760p/8640p)"
 msgstr ""
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "16:9 (Default)"
 msgstr "16:9 (Standar)"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Force 21:9"
 msgstr "Paksa 21:9"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Force 16:10"
 msgstr "Paksa 16:10"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Force 32:9"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid ""
 "Fix screen tearing. FIFO (Vsync) does not drop frames. FIFO Relaxed allows "
@@ -12922,361 +12922,361 @@ msgid ""
 "may drop frames."
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Immediate"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Mailbox (Recommended)"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "FIFO (VSync On)"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "FIFO Relaxed"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "ASYNC SHADER COMPILE"
 msgstr "KOMPILASI ASYNC SHADER"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid ""
 "FXAA has a lower performance impact, goof for low resolutions. SMAA offers "
 "best quality."
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "ANTI-ALIASING METHOD"
 msgstr "METODE ANTI-ALIASING"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "SMAA"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Gaussian"
 msgstr "Gaussian"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "ScaleForce"
 msgstr "ScaleForce"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "AMD FidelityFX Super Resolution"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid ""
 "GPU emulation accuracy. Most games render fine with Normal. High is required "
 "to ensure particles render correctly."
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "ACCURACY LEVEL"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Extreme"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "CHOOSE SOUND OUTPUT MODE"
 msgstr "KOMPILASI ASYNC SHADER"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Mono"
 msgstr "Mono"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Choose whether the virtual switch is docked or not."
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "DOCK MODE"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Undocked"
 msgstr ""
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Docked (Default)"
 msgstr ""
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "British English"
 msgstr "Inggris - British"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "Canadian French"
 msgstr "Kanada - Prancis"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "Latin American Spanish"
 msgstr "Amerika Latin - Spanyol"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "Brazilian Portuguese"
 msgstr "Brasil - Portugis"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "Choose your console region."
 msgstr "Pilih wilayah konsol kamu"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "CHOOSE CONSOLE REGION"
 msgstr "PILIH WILAYAH KONSOL"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "Australia"
 msgstr "Australia"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "China"
 msgstr "Cina"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "Korea"
 msgstr "Korea"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "Taiwan"
 msgstr "Taiwan"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Choose your console timezone."
 msgstr "PILIH ZONA WAKTU KONSOL ANDA"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "CHOOSE CONSOLE TIMEZONE"
 msgstr "PILIH ZONA WAKTU KONSOL"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "CET"
 msgstr "CET"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "CST6CDT"
 msgstr "CST6CDT"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Cuba"
 msgstr "Kuba"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "EET"
 msgstr "EET"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Egypt"
 msgstr "Mesir"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Eire"
 msgstr "Eire"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "EST"
 msgstr "EST"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "EST5EDT"
 msgstr "EST5EDT"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "GB"
 msgstr "GB"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "GB-Eire"
 msgstr "GB - Eire"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "GMT"
 msgstr "GMT"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "GMT+0"
 msgstr "GMT+0"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "GMT-0"
 msgstr "GMT-0"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "GMT0"
 msgstr "GMT0"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Greenwich"
 msgstr "Greenwich"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Hong Kong"
 msgstr "Hong Kong"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "HST"
 msgstr "HST"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Iran"
 msgstr "Iran"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Israel"
 msgstr "Israel"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Jamaica"
 msgstr "Jamaika"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Kwajalein"
 msgstr "Kwajalein"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Libya"
 msgstr "Libia"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "MET"
 msgstr "MET"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "MST"
 msgstr "MST"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "MST7MDT"
 msgstr "MST7MDT"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Navajo"
 msgstr "Navajo"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "NZ"
 msgstr "NZ"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "NZ-CHAT"
 msgstr "NZ-CHAT"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "PRC"
 msgstr "PRC"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "PST8PDT"
 msgstr "PST8PDT"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "ROC"
 msgstr "ROC"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "ROK"
 msgstr "ROK"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Singapore"
 msgstr "Singapura"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "UCT"
 msgstr "UCT"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Univarsal"
 msgstr "Univarsal"
 
-#. TRANSLATION: citron, ryujinx
+#. TRANSLATION: eden, ryujinx
 msgctxt "game_options"
 msgid "UTC"
 msgstr "UTC"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "W-SU"
 msgstr "W-SU"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "WET"
 msgstr "WET"
 
-#. TRANSLATION: citron
+#. TRANSLATION: eden
 msgctxt "game_options"
 msgid "Zulu"
 msgstr "Zulu"
